test/compile_fail/effect_resource_acquire_without_context.zig
const shift = @import("shift");

const fake_cap = struct {};

comptime {
    _ = shift.effect.resource.acquire(fake_cap, 123);
}
